--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3",
+    "bcrypt": "^5.1.1",
+    "express": "^4.19.2",
     "mongodb": "^6.5.0"
   }
 }
